# ChangeLog for net-im/ekg2
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-im/cvs-repo/gentoo-x86/net-im/ekg2/ChangeLog,v 1.23 2007/02/22 02:19:09 peper Exp $

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  09 Jan 2007; Sven Wegener <swegener@gentoo.org> ekg2-20061202.ebuild:
  Use full atom for built_with_use.

  11 Dec 2006; <sekretarz@gentoo.org> ekg2-20061202.ebuild:
  Fixed inherit statement, thanks to Mr_Bones

  11 Dec 2006; <sekretarz@gentoo.org> +files/ekg2-20061202-intl.patch,
  ekg2-20061202.ebuild:
  Fixed build problems on gentoo/fbsd, bug #157699

*ekg2-20061202 (10 Dec 2006)

  10 Dec 2006; <sekretarz@gentoo.org>
  +files/ekg2-20061202-no-default-debug.patch, +ekg2-20061202.ebuild:
  Version bump

*ekg2-20061007 (09 Oct 2006)

  09 Oct 2006; Karol Wojtaszek <sekretarz@gentoo.org> -ekg2-20050206.ebuild,
  -ekg2-20050309.ebuild, -ekg2-20050518.ebuild, -ekg2-20050706.ebuild,
  ekg2-20051202.ebuild, +ekg2-20061007.ebuild:
  Version bump

  13 Dec 2005; Luis Medinas <metalgod@gentoo.org> ekg2-20051202.ebuild:
  Added ~amd64 keyword. Closes bug #114844.

*ekg2-20051202 (04 Dec 2005)

  04 Dec 2005; Karol Wojtaszek <sekretarz@gentoo.org> +ekg2-20051202.ebuild:
  Version bump

*ekg2-20050706 (11 Jul 2005)

  11 Jul 2005; <sekretarz@gentoo.org> +ekg2-20050706.ebuild:
  Version bump

*ekg2-20050518 (19 May 2005)

  19 May 2005; Karol Wojtaszek <sekretarz@gentoo.org> +ekg2-20050518.ebuild:
  Version bump

*ekg2-20050309 (11 Mar 2005)

  11 Mar 2005; Karol Wojtaszek <sekretarz@gentoo.org> -ekg2-20041104.ebuild,
  -ekg2-20041118.ebuild, -ekg2-20041220.ebuild, +ekg2-20050309.ebuild:
  Version bump

*ekg2-20050206 (07 Feb 2005)

  07 Feb 2005; Karol Wojtaszek <sekretarz@gentoo.org> +ekg2-20050206.ebuild:
  Version bump

*ekg2-20041118 (21 Nov 2004)

  21 Nov 2004; Karol Wojtaszek <sekretarz@gentoo.org> -ekg2-20040928.ebuild,