@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX ekg2-20061202-intl.patch 264 RMD160 1f69a4cb5d03231fc983b43d238e9ce5ccb3e61c SHA1 7d032686486dff781d2560e8072f3650abab6549 SHA256 637787ebfd75e3b24371be2bc2166a339b2435261d360196d9959e5aed497ba1
 AUX ekg2-20061202-no-default-debug.patch 353 RMD160 03301f7e70e753a5c57e45001c4d05730050c6ed SHA1 ed5e457d1a56b2417bc968251aa15f1115f752a1 SHA256 2cd227706c3dd8da1abb9ed88f0e0867ccdf7257e57da024733ff21f32d63dc6
 DIST ekg2-20051202.tar.gz 860511 RMD160 8b2d67f5b6279501c39bf86cac7c302bf6399325 SHA1 de6e2f0bbf09f5da5f1507a02be8dcb57f7a716a SHA256 c07efca2993b6ce110614384b2f7f101151beb07966dde40a78d46bd2257fbbf
@@ -6,5 +9,12 @@ DIST ekg2-20061202.tar.gz 1072122 RMD160 58e891d059ec8934363f8d1b44b7c53be6ccfa3
 EBUILD ekg2-20051202.ebuild 1296 RMD160 2101169ffbf9691824a713d0375c21fbb9fd229e SHA1 65766b9eb4979a546ca2bbfad977a0726c26fba1 SHA256 f74885bdbfd1ea023c9c5e2eb1bf745dfc1e6e24973c0230ece3ab9d3b516436
 EBUILD ekg2-20061007.ebuild 1296 RMD160 910dade13220bbfb4598827c0a80e0d21b82d5f0 SHA1 735ab12711e44a8c2b5b047d8001da755970efac SHA256 58825670bec00292358b9f9aea142d6406aabce9a271eb5443192103aababd50
 EBUILD ekg2-20061202.ebuild 2620 RMD160 63df9f4957cf11cd3582942a2c2d7491694229fa SHA1 97e0280e297b4f4c0a9c8bddef639276683ee73c SHA256 e121d4a4ce3b0209761bd6e1f8d8cd4eb8095136a05815664c14ba27d5c53a6c
-MISC ChangeLog 3382 RMD160 69839e9a59d9eac1daa9020ef0a7aa4aaeab6de3 SHA1 9a65cbb7aa950fb6a09c00fd7c1cdcddeaa37356 SHA256 85e048ebf6457a3fb54a50306ec39472edd972873b36337d9921a8462237d004
-MISC metadata.xml 259 RMD160 d41dd93dd43c9df66ed7632bb1789a26f4fc2e79 SHA1 0fa86a660e28e2f88cb9108e9a0eed2203c1ae13 SHA256 b878096a29afd76661f01786058d7000eab7c8ae2da54211f87f679c6939aefc
+MISC ChangeLog 3514 RMD160 288c186c7eb920ab70b079797bc1d7e2abe70621 SHA1 3fac20b97e7efeeeedc8ad98ce96c98d50768d2f SHA256 c4e055b72527886e9df2ec8be67aaee5f1b1cb39c9ebfd1b2703648d2a7f9d29
+MISC metadata.xml 160 RMD160 a6ad0c05d64e31840114207dd45b62f889cbbe59 SHA1 be796d9ed970ebab12c2e943b724542bec95a3fe SHA256 11f74b4a52d7818d4a23729cf0dafa198080e898f1fc34aa63f639975f892940
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFH2l6hyuNVb5qfaOYRAqpFAKCN8v7gZl1MO2i97YI2cDGP2LrzUwCeMgpW
+JKpnFsAkfDJSavp7tkgQwog=
+=O0ay
+-----END PGP SIGNATURE-----
