@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>net-im</herd>
-<maintainer>
-    <email>sekretarz@gentoo.org</email>
-    <name>Karol Wojtaszek</name>
-</maintainer>
+	<herd>net-im</herd>
 </pkgmetadata>
