@@ -4,14 +4,11 @@ AUX skype.debus.config 436 RMD160 ec47725458e05cca8e37316989f473963b5b654d SHA1 
 AUX skype.sh 243 RMD160 994fb89dc4c9e5f205de1d552695a0f63a184fb3 SHA1 a973105cc69d7add1978d0fb11800349a34431c1 SHA256 cbd934a18023e014ca34b78b33fbbeb3ddd340f14c79619871c3a39395b91594
 DIST libsigc++20-2.0.17-1-from-fc5.rf.i386.tar.gz 7845 RMD160 e66d772cc6548fce1681febab7fbfa0846c9b910 SHA1 a3a048249c0eaef77bd7bce28cf0f98c42327c21 SHA256 066422155ddb13eb6882fcd8d253460edcf4ee3961706ff027be90136aee7d56
 DIST skype-1.4.0.118.tar.bz2 13200492 RMD160 7dc762c99e47de4c5f43ea78723a4444722c84ca SHA1 8bf7737086702adbd276f081aad3bfe00ea8e22c SHA256 fbbcaf65a74bc7c13ad953fc17d219ad56b23da933e59e493d10bf0215662613
-DIST skype-2.0.0.27.tar.bz2 14965534 RMD160 26b88b1b241350d85091e9e965a70823495e0fae SHA1 41d8bc805cb0aee001c555ba97409c3c9c165788 SHA256 ad9050bd8a511e82e3a1e699622fb9d100386129248b53068501fc9772513b5d
-DIST skype-2.0.0.43.tar.bz2 15005895 RMD160 0ac3aabb68693d6e879525d81b00c8337fdd5cce SHA1 5a6d92339ad3b04f87e9bf5a13e23a83161bcd26 SHA256 6b9581e6d73d6ca641ffb9b3363c600115f9ead409b921f8182383dcd5a8f341
+DIST skype-2.0.0.63.tar.bz2 15050614 RMD160 aafe02b72cdfc0d734c593a88e4e66762cec375a SHA1 a787c6541aa1313f4600eb635b06ef808c11affa SHA256 48ec096f8cd55e66120b02e8c513acfaf4d40e62c8d4c1d54582088991c52cee
 DIST skype-lang-1.4.0.118.tar.bz2 261369 RMD160 0469c735da70459f39eb56a2b14afb1d8d8206da SHA1 344a73a10376f3b1d5b77b9adadb15405ccaede5 SHA256 d2421894d6933a4e658b69c9d00c3eb3728aa26ec82acda537159516b3636cce
 DIST skype_static-1.4.0.118.tar.bz2 19582287 RMD160 39f95c35e6dc483fde6a5b6b3688160338fda594 SHA1 19d1a9581b8f97a88f2196bd32c493406cea79d3 SHA256 1293f54811a36b2a1b83c56a4ad2844e58c753fe39b61422fac66b001d0f9e0c
-DIST skype_static-2.0.0.27.tar.bz2 21468989 RMD160 341fb44238e6d3e67c52285af8cece2d1a7910cd SHA1 ba0482300f6e7af780046bae26e312adac7c3fc2 SHA256 aea99eab4e4c981fe7a7ab4d38c0f5fdd713c53eddefafcfe141d6d0f77b3502
-DIST skype_static-2.0.0.43.tar.bz2 21532628 RMD160 6756527a7a74e3c3686a07d23f8e6c771691e737 SHA1 9a583d130819f4945e6ea765e0883a2ef5033a63 SHA256 8eebb53ad240fbd3f092434396c9417953aa86c0b6bd24ac27c280db419bda2a
+DIST skype_static-2.0.0.63.tar.bz2 21568615 RMD160 4a53cad35e0983ea332e314ca9ac621cd6c686ae SHA1 2ccb2b28bc692a82930c44e215ba58caac0d9e7a SHA256 e14b9c6faae3e55fd5dc4c6253fa7c2781418d532d75554928f5fd6c086ce736
 EBUILD skype-1.4.0.118.ebuild 3711 RMD160 8d4c62f2417af13a1d6afdbb7bae1746fd6df83c SHA1 5725d85e9710c7659e95de55c4af55451af931ab SHA256 a89905e47f20ae4c87bdc392ed5ffe787cc98ccae82cb481ba703b6547f3f3f8
-EBUILD skype-2.0.0.27.ebuild 3288 RMD160 9df1ae7d9c21d9e85b352e15285781d31e90c3a3 SHA1 05a761c67346c215fbb5f21f05f76d4693e067a4 SHA256 7a525ec099e022c9072c00c0f94a2b05e601182e2c2bc07c47be1679e8cee2b8
-EBUILD skype-2.0.0.43.ebuild 3288 RMD160 b3f22faa475e468262529fbddc0c5e491e659185 SHA1 a904cdfb9afc5df5c01c0095eaa261fbd42d7c11 SHA256 add734d16fe72ad3a0575f9af1710d4b29714151855d26419dbfaef2ae3d3b8f
-MISC ChangeLog 16701 RMD160 56730399ecba9ca8e5a01332071a1d1a8667eb38 SHA1 d3bd40928748adf25e7bf9ff7e3f5fde8902d437 SHA256 57ff89c9f05790c0ebc190d8aca8469aaec709e53f5fe53bc8d7a9a87b8e62c5
+EBUILD skype-2.0.0.63.ebuild 3291 RMD160 9d348778f44f54a60569986ad460ee502c8358f7 SHA1 1b0eba12bd95aa846bebacc7ced78a1e0c9036dd SHA256 1bb7290e46463a23d5e127afd518e39db0b7dd5a8e59566804f6dff3a446589d
+MISC ChangeLog 16966 RMD160 87f6c1efaade5f4af92664a6fa56cbb59dc183f5 SHA1 e4dbb03de90b1765fcabe1b17751eef2edc29932 SHA256 20edee0bd2ac25d8ed8d7d0134d23f563d77487cdc68606e597a9473d39598d7
 MISC metadata.xml 488 RMD160 0dc53516bb6b9f04aad7625aaf8e81f94f288117 SHA1 8e376a6a24f831850ee87a8538c5b3336f6986e2 SHA256 964cb103f057a79a194dea8ef8cd183400daa2d8f7041a57f95f3544b0b0a7a9
